# Calculator

./: README.md
src/: Makefile  docs.tex
src/smart_calc_gui/: CMakeLists.txt  creditdialog.cpp  creditdialog.h  creditdialog.ui  main.cpp  maincalc.cpp  maincalc.h  maincalc.ui
src/smart_calc_src/: main.c  s21_lexeme.h
src/smart_calc_src/s21_credit_calc/: s21_credit_calc.c  s21_credit_calc.h
src/smart_calc_src/s21_lexeme_stack/: clear.c  create_lexeme.c  init_stack.c  peek.c  pop.c  push.c  s21_lexeme_stack.h
src/smart_calc_src/s21_smartcalc/: calc.c  func_calc.c  norm_str.c  op_calc.c  pop_push_func.c  pop_push_op.c  s21_smartcalc.c  s21_smartcalc.h
src/smart_calc_src/s21_str_preproc/: del_space.c  proc_sign.c  replace.c  s21_str_preproc.h
src/smart_calc_src/s21_validator/: s21_validator.h  validate.c  validate_brackets.c  validate_func.c  validate_op.c  validate_symb.c
src/smart_calc_src/test/: credit_calc_test.c  s21_calc_test.h  smart_calc_test.c  test.c
